<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_regist">用户注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="regist">注册账号</string>
    <string name="sign_in">登录</string>
    <string name="forget_code">忘记密码？</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_dbhelper">DBHelper</string>
    <string name="more">更多</string>
    <string name="find">发现</string>
    <string name="homepage">主页</string>
    <string name="mine">我的</string>
    <string name="mark">收藏</string>
    <string name="bbs">论坛</string>
    <string name="exit_ensure">退出</string>
    <string name="cancel_exit">取消</string>
    <string name="banner">滚动条</string>
    <string name="shop">团购</string>
    <string name="schedule">课表</string>
    <string name="charge">交电费</string>
    <string name="msm">消息推送</string>
    <string name="easylife">生活服务</string>
    <string name="title_activity_m">MActivity</string>
    <string name="title_activity_mai">MaiActivity</string>
    <string name="luntan">华农论坛</string>
    <string name="addluntan">添加博文</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_content"> 添    加  说  说</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="curButton">确认</string>
    <string name="grade_ask_pw">请输入您设置的查验码</string>
    <string name="title_activity_shedule">ScheduleActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_infor">InforActivity</string>

    <string-array name="userspinnerdata">
        <item></item>
        <item>导入课表</item>
        <item>查询成绩</item>
    </string-array>
    <string-array name="weekdays">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>
    <string-array name="years">
        <item>2011-2012</item>
        <item>2012-2013</item>
        <item>2013-2014</item>
        <item>2014-2015</item>
        <item>2015-2016</item>
        <item>2016-2017</item>
    </string-array>
    <string-array name="num">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="title_activity_show">lll</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_set_pswd">SetPswdActivity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="home">主页</string>
    <string name="my">我的</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="imformation">消息</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="hint">请输入网址</string>
    <string name="contd"></string>
    <string name="myBaiduMap">我的百度地图</string>
    <string name="ret">返回</string>
    <string name="title_activity_item01">Item01Activity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="d"></string>
    <!-- 下拉刷新自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">加载中</string>
    
    

</resources>