<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/fei" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/myedit"
            android:hint="@string/username" />

        <View
            android:id="@+id/line_view"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/username"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_view"
            android:background="@drawable/myedit"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/mybtn"
            android:text="@string/sign_in"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/regist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="13dp"
            android:text="@string/regist"
            android:textColor="#29b6f6" />

        <TextView
            android:id="@+id/foget_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/regist"
            android:layout_alignBottom="@+id/regist"
            android:layout_alignParentRight="true"
            android:layout_marginRight="13dp"
            android:text="@string/forget_code"
            android:textColor="#29b6f6" />
    </RelativeLayout>

</LinearLayout>