<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/mLinerLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fffaf0"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" >
        </FrameLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_mine"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/tabs_search"
                android:text="@string/mine"
                android:textColor="@drawable/radio_group_selector" />

            <RadioButton
                android:id="@+id/radio_home"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/tabs_home"
                android:text="@string/homepage"
                android:textColor="@drawable/radio_group_selector" />

            <RadioButton
                android:id="@+id/radio_more"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/tabs_more"
                android:text="@string/more"
                android:textColor="@drawable/radio_group_selector" />
        </RadioGroup>
    </LinearLayout>

</TabHost>