<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ls_3"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/jsp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:background="@drawable/myedit"
            android:hint="@string/username" />

        <View
            android:id="@+id/line_view"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/username"
            android:background="@android:color/darker_gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_view"
            android:background="@drawable/myedit"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/user_regist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/mybtn"
            android:text="@string/user_regist"
            android:textColor="#ffffff" />
    </RelativeLayout>

</LinearLayout>